--- a/admin/package.json
+++ b/admin/package.json
@@ -16,6 +16,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.482.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
