--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^10.0.6",
     "sweetalert2": "^11.17.2"
   },
